# long_Decompress

./: .gitignore  DEVELOPMENT_STATUS.md  EXTRACTION_FULL_FLOW_DESIGN.md  EXTRACTION_IMPLEMENTATION_PLAN.md  README.md  Rust-Tauri-Vue3-实施计划.md  UI_UX_Design.md  example_usage.py  requirements.txt  任务队列系统设计文档.md  功能需求分析.md  功能需求草案.md  团队协作规范.md  密码本实现方案.md  性能优化检查清单.md  核心解压功能分析.md  测试加密密码服务.rs  问题跟踪模板.md  项目管理文档.md
long-compress-assistant/src-tauri/: Cargo.toml  TEST_FRAMEWORK_PLAN.md  check_7z.rs  check_zip_features.rs  simple_test.rs  tauri.conf.json  test_minimal.rs  test_zip_api.rs  test_zip_password.rs
long-compress-assistant/src-tauri/TranslateSoftware/src/: index.css
long-compress-assistant/src-tauri/benches/: compression_benchmark.rs
long-compress-assistant/src-tauri/big-data-expert/: README.md  SKILL.md  patterns.md
long-compress-assistant/src-tauri/big-data-expert/templates/: BlockItem.vue.txt  EChart.vue.txt  Layout.vue.txt  responsive.scss.txt
long-compress-assistant/src-tauri/data/: master_password.hash
long-compress-assistant/src-tauri/data/passwords/: 14577aef-e880-4982-83dc-7ee80529233d.json  44dbc194-4470-4a45-a28e-19b700c15573.json  7a34d151-5a5d-45f1-8e8a-9212f3fa260b.json  a0a67df3-907b-4d2c-bb78-94ed6e615846.json  ddcd5933-7e59-4a2b-be68-d9f91f6593a9.json  f81a0d03-e162-49f6-9c58-63db54dcfc66.json  fba79529-4016-40ea-8446-8ab481c12015.json
long-compress-assistant/src-tauri/examples/: test_universal_engine_full.rs  verify_7z_logic.rs  verify_dispatcher.rs  verify_error.rs  verify_progress_streaming.rs  verify_smart_password_attempt.rs  verify_zip_logic.rs
long-compress-assistant/src-tauri/game-data-architect/: README.md  SKILL.md  patterns.md
long-compress-assistant/src-tauri/game-data-architect/templates/: 01_system_data.md  02_data_dictionary.md  03_ui_spec.md  04_logic_flow.md  05_mock_data.json
long-compress-assistant/src-tauri/game-planner/: README.md  SKILL.md  patterns.md
long-compress-assistant/src-tauri/game-planner/templates/: 01_concept.md  02_system.md  03_combat.md  04_economy.md  05_narrative.md  06_market.md
long-compress-assistant/src-tauri/icons/: icon.icns
long-compress-assistant/src-tauri/migrations/: 0001_initial.sql  0002_password_book.sql  0003_add_use_count.sql
long-compress-assistant/src-tauri/skill-maker/: SKILL.md
long-compress-assistant/src-tauri/src/: backend_progress.md  lib.rs  main.rs
long-compress-assistant/src-tauri/src/commands/: compression.rs  encrypted_password.rs  file.rs  mod.rs  password.rs  system.rs  system_integration.rs  task_queue.rs
long-compress-assistant/src-tauri/src/config/: commands.rs  (+8 more)
long-compress-assistant/src-tauri/tests/: config_comprehensive_test.rs  config_file_loader_test.rs  config_integration_test.rs  config_system_smoke_test.rs  memory_usage_test.rs  password_book_integration_test.rs  password_zip_test.rs  rar_enhanced_test.rs  rar_support_test.rs  split_compression_test.rs  zip_compression_test.rs
(+266 files in other folders)
