[package]
name = "long-compress-assistant"
version = "0.1.0"
description = "智能压缩解压助手"
authors = ["Your Name"]
license = "MIT"
edition = "2021"

[dependencies]
tauri = { version = "2.0.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"

# 数据库相关
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "macros"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# 文件操作
walkdir = "2.5"
filetime = "0.2"
path-absolutize = "3.1"

# 压缩解压库
zip = "0.6"
flate2 = "1.0"
tar = "0.4"
bzip2 = "0.4"
xz2 = "0.1"

# 加密和安全
rust-crypto = "0.2"
argon2 = "0.5"
aes-gcm = "0.10"

# 并发处理
rayon = "1.8"
crossbeam = "0.8"
dashmap = "5.5"
num_cpus = "1.16"

# 工具库
regex = "1.10"
percent-encoding = "2.3"
base64 = "0.21"
hex = "0.4"
dirs = "5.0"
rand = "0.8"
zeroize = "1.7"
blake3 = "1.5"
wildmatch = "2.1"
sha2 = "0.10"
md5 = "0.7"

# 系统信息
sysinfo = "0.30"

# 静态初始化
lazy_static = "1.4"

[build-dependencies]
tauri-build = { version = "2.0.0" }

[dev-dependencies]
tempfile = "3.10"
mockall = "0.12"
criterion = "0.5"
assert_fs = "1.0"
predicates = "3.0"
test-log = "0.2"
proptest = "1.4"