[package]
name = "long-compress-assistant"
version = "0.1.0"
description = "智能压缩解压助手"
authors = ["Your Name"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["api-all", "shell-open", "system-tray"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
base64 = "0.21"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
regex = "1.10"
zip = "0.6"
sevenz-rust = "0.5"
lazy_static = "1.4"
flate2 = "1.0"
tar = "0.4"
dashmap = "5.5"
crossbeam = "0.8"
wildmatch = "2.3"
blake3 = "1.5"
sha2 = "0.10"
md5 = "0.7"
zxcvbn = "2.2"
sysinfo = "0.30"
zeroize = "1.7"
winreg = "0.52"
dirs = "5.0"
serde_yaml = "0.9"
toml = "0.8"
async-trait = "0.1"
rayon = "1.8"
async-trait = "0.1"
once_cell = "1.19"
bzip2 = "0.4"
xz2 = "0.6"
windows = { version = "0.52", features = ["Win32_Security", "Win32_System_Threading"] }

[dev-dependencies]
tempfile = "3.10"
mockall = "0.12"
criterion = "0.5"
assert_fs = "1.0"
predicates = "3.0"
test-log = "0.2"
proptest = "1.4"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
